force-app/main/default/objects/Factory__c/Factory__c.object-meta.xml
<CustomObject>
    <label>Factory</label>
    <nameField>
        <label>Factory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Factories</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>