force-app/main/default/objects/Factory__c/fields/Default_Factory__c.field-meta.xml
<CustomField>
    <fullName>Default_Factory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default Factory OLD</label>
    <type>Checkbox</type>
</CustomField>