force-app/main/default/objects/Factory__c/fields/Factory_Address__c.field-meta.xml
<CustomField>
    <fullName>Factory_Address__c</fullName>
    <label>Factory Address</label>
    <type>Address</type>
</CustomField>