force-app/main/default/objects/Factory__c/fields/Factory_code__c.field-meta.xml
<CustomField>
    <fullName>Factory_code__c</fullName>
    <description>Factory code required for integration</description>
    <label>Factory code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>