force-app/main/default/objects/Factory__c/fields/FactoryLocation__c.field-meta.xml
<CustomField>
    <fullName>FactoryLocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Factory Location</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Location.LocationType</field>
            <operation>equals</operation>
            <value>Factory</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Factories</relationshipLabel>
    <relationshipName>LumonFactories</relationshipName>
    <type>Lookup</type>
</CustomField>