force-app/main/default/objects/Factory__c/fields/isDefaultFactory__c.field-meta.xml
<CustomField>
    <fullName>isDefaultFactory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isDefaultFactory</label>
    <type>Checkbox</type>
</CustomField>