force-app/main/default/objects/Factory__c/fields/Operating_Hours__c.field-meta.xml
<CustomField>
    <fullName>Operating_Hours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Operating Hours OLD</label>
    <referenceTo>OperatingHours</referenceTo>
    <relationshipLabel>Factories</relationshipLabel>
    <relationshipName>Factories</relationshipName>
    <type>Lookup</type>
</CustomField>