force-app/main/default/objects/Factory__c/fields/OperatingHours__c.field-meta.xml
<CustomField>
    <fullName>OperatingHours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Operating Hours</label>
    <referenceTo>OperatingHours</referenceTo>
    <relationshipLabel>Factories</relationshipLabel>
    <relationshipName>LumonFactories</relationshipName>
    <type>Lookup</type>
</CustomField>