force-app/main/default/objects/Factory__c/fields/StreetAddress__c.field-meta.xml
<CustomField>
    <fullName>StreetAddress__c</fullName>
    <label>Factory Street Address</label>
    <type>Address</type>
</CustomField>